--- a/outreach.html
+++ b/outreach.html
@@ -12,7 +12,7 @@
   <!-- Tailwind CSS -->
   <link rel="stylesheet" href="dist/css/output.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body class="antialiased">
   <!-- Progress bar -->
@@ -156,7 +156,7 @@
     </section>
 
 	<!-- Press Coverage -->
-    <section class="py-16 md:py-24 bg-white">
+    <section class="pb-16 md:pb-24 bg-white">
 		<div class="container mx-auto px-4">
 		  <h2 class="text-3xl font-bold mb-12 text-center">Press & Media</h2>
 		  
@@ -164,8 +164,8 @@
 			<!-- Press Item 1 -->
 			  <div>
 				<div class="flex flex-col">
-				  <div class="mb-4 aspect-video bg-gray-100 rounded-md flex items-center justify-center">
-					<img src="dist/images/natgeo-kids-book.png" alt="National Geographic Kids Book" class="max-h-full max-w-full object-contain">
+				  <div class="mb-6 flex items-center justify-center">
+					<img src="dist/images/natgeo-kids-book.png" alt="National Geographic Kids Book" style="max-height: 560px; max-width: 100%;" class="object-contain">
 				  </div>
 				  <div>
 					<h3 class="text-xl font-bold mb-2">National Geographic Kids Book</h3>
@@ -180,8 +180,8 @@
 			<!-- Press Item 2 -->
 			  <div>
 				<div class="flex flex-col">
-				  <div class="mb-4 aspect-video bg-gray-100 rounded-md flex items-center justify-center">
-					<img src="dist/images/natgeo-kids-magazine.png" alt="National Geographic Kids Magazine" class="max-h-full max-w-full object-contain">
+				  <div class="mb-6 flex items-center justify-center">
+					<img src="dist/images/natgeo-kids-magazine.png" alt="National Geographic Kids Magazine" style="max-height: 560px; max-width: 100%;" class="object-contain">
 				  </div>
 				  <div>
 					<h3 class="text-xl font-bold mb-2">National Geographic Kids Magazine</h3>
@@ -414,14 +414,17 @@
           <p>&copy; 2025 Ana Belén Yánez Suárez. All rights reserved.</p>
         </div>
         <div class="flex space-x-6">
-          <a href="https://x.com/belenocean" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+          <a href="https://x.com/belenocean" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
             <i class="fab fa-twitter text-2xl"></i>
           </a>
-          <a href="https://www.instagram.com/anabelenys/" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+          <a href="https://www.instagram.com/anabelenys/" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
             <i class="fab fa-instagram text-2xl"></i>
           </a>
-          <a href="https://www.linkedin.com/in/ana-belen-yanez" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+          <a href="https://www.linkedin.com/in/ana-belen-yanez" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
             <i class="fab fa-linkedin text-2xl"></i>
+          </a>
+          <a href="https://bsky.app/profile/belenocean.bsky.social" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
+            <i class="fab fa-bluesky text-2xl"></i>
           </a>
         </div>
       </div>
