--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <!-- Tailwind CSS -->
   <link rel="stylesheet" href="dist/css/output.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body class="antialiased">
   <!-- Progress bar -->
@@ -582,14 +582,17 @@ I am a marine biologist and a <a href="https://education.nationalgeographic.org/
           <p>&copy; 2025 Ana Belén Yánez Suárez. All rights reserved.</p>
         </div>
         <div class="flex space-x-6">
-          <a href="https://x.com/belenocean" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+          <a href="https://x.com/belenocean" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
             <i class="fab fa-twitter text-2xl"></i>
           </a>
-          <a href="https://www.instagram.com/anabelenys/" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+          <a href="https://www.instagram.com/anabelenys/" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
             <i class="fab fa-instagram text-2xl"></i>
           </a>
-          <a href="https://www.linkedin.com/in/ana-belen-yanez" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+          <a href="https://www.linkedin.com/in/ana-belen-yanez" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
             <i class="fab fa-linkedin text-2xl"></i>
+          </a>
+          <a href="https://bsky.app/profile/belenocean.bsky.social" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
+            <i class="fab fa-bluesky text-2xl"></i>
           </a>
         </div>
       </div>
