--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <!-- Tailwind CSS -->
   <link rel="stylesheet" href="dist/css/output.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body class="antialiased">
   <!-- Progress bar -->
@@ -61,14 +61,17 @@
             <!-- Social Media -->
             <div class="text-center">
               <div class="flex justify-center space-x-8 mb-6">
-                <a href="https://x.com/belenocean" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+                <a href="https://x.com/belenocean" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
                   <i class="fab fa-twitter text-3xl"></i>
                 </a>
-                <a href="https://www.instagram.com/anabelenys/" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+                <a href="https://www.instagram.com/anabelenys/" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
                   <i class="fab fa-instagram text-3xl"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/ana-belen-yanez" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+                <a href="https://www.linkedin.com/in/ana-belen-yanez" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
                   <i class="fab fa-linkedin text-3xl"></i>
+                </a>
+                <a href="https://bsky.app/profile/belenocean.bsky.social" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
+                  <i class="fab fa-bluesky text-3xl"></i>
                 </a>
               </div>
               <p class="text-lg">Follow me for updates on my research, expeditions, and conservation efforts. I regularly share insights from my work with coral reef ecosystems and deep-sea explorations.</p>
@@ -86,14 +89,17 @@
           <p>&copy; 2025 Ana Belén Yánez Suárez. All rights reserved.</p>
         </div>
         <div class="flex space-x-6">
-          <a href="https://x.com/belenocean" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+          <a href="https://x.com/belenocean" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
             <i class="fab fa-twitter text-2xl"></i>
           </a>
-          <a href="https://www.instagram.com/anabelenys/" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+          <a href="https://www.instagram.com/anabelenys/" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
             <i class="fab fa-instagram text-2xl"></i>
           </a>
-          <a href="https://www.linkedin.com/in/ana-belen-yanez" class="text-gray-600 hover:text-accent transition-colors" target="_blank" rel="noopener">
+          <a href="https://www.linkedin.com/in/ana-belen-yanez" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
             <i class="fab fa-linkedin text-2xl"></i>
+          </a>
+          <a href="https://bsky.app/profile/belenocean.bsky.social" class="text-accent hover:text-accent-dark transition-colors" target="_blank" rel="noopener">
+            <i class="fab fa-bluesky text-2xl"></i>
           </a>
         </div>
       </div>
