--- a/collaborations.html
+++ b/collaborations.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="dist/css/output.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="dist/images/favicon.png">
 </head>
 <body class="antialiased">
   <!-- Progress bar -->
