--- a/research.html
+++ b/research.html
@@ -22,6 +22,8 @@
 	<!-- Font Awesome -->
 	<link rel="stylesheet"
 		  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+	<!-- Favicon -->
+	<link rel="icon" type="image/png" href="dist/images/favicon.png">
 </head>
 
 <body class="antialiased">
