--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
           <li><a href="index.html" class="text-gray-800 hover:text-accent transition-colors">Home</a></li>
           <li><a href="about.html" class="text-accent font-medium">About</a></li>
           <li><a href="research.html" class="text-gray-800 hover:text-accent transition-colors">Research</a></li>
+          <li><a href="expeditions.html" class="text-gray-800 hover:text-accent transition-colors">Expeditions</a></li>
           <li><a href="publications.html" class="text-gray-800 hover:text-accent transition-colors">Publications</a></li>
           <li><a href="collaborations.html" class="text-gray-800 hover:text-accent transition-colors">Collaborations</a></li>
           <li><a href="outreach.html" class="text-gray-800 hover:text-accent transition-colors">Outreach</a></li>
@@ -50,7 +51,6 @@
           <div class="aspect-video rounded-lg shadow-md mb-2 overflow-hidden">
             <img src="dist/images/image6.jpg" alt="Yellow coral in the ocean" class="w-full h-full object-cover">
           </div>
-          <p class="text-xs text-gray-500 text-right mb-8">Image credits: Misha Vallejo Prut</p>
           <p class="text-lg mb-6">
 I am a marine biologist and a <a href="https://education.nationalgeographic.org/resource/ana-belen-yanez-suarez/" target="_blank" class="text-accent hover:text-accent-dark transition-colors">National Geographic Explorer</a>. I graduated with an International Master of Marine Biological Recourses (IMBRSea) at UGent (Belgium) and Sorbonne University (France), where I was awarded an Erasmus Mundus Join Master Scholarship. In my MSc research, I studied the effects of climate change and ocean eutrophication on tropical corals. I have been an alumnus of Conservation Leadership Programme since 2015 due to my early work in marine conservation and sustainable fisheries in marine protected areas in Ecuador. I am currently a PhD candidate at Memorial University of Newfoundland, Canada, where I study the drivers of cold-water-coral abundance in different regions of the world.</p>
         </div>
