--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
         <ul class="md:flex space-y-4 md:space-y-0 md:space-x-6">
           <li><a href="index.html" class="text-gray-800 hover:text-accent transition-colors">Home</a></li>
           <li><a href="research.html" class="text-gray-800 hover:text-accent transition-colors">Research</a></li>
+          <li><a href="expeditions.html" class="text-gray-800 hover:text-accent transition-colors">Expeditions</a></li>
           <li><a href="publications.html" class="text-gray-800 hover:text-accent transition-colors">Publications</a></li>
           <li><a href="collaborations.html" class="text-gray-800 hover:text-accent transition-colors">Collaborations</a></li>
           <li><a href="outreach.html" class="text-gray-800 hover:text-accent transition-colors">Outreach</a></li>
