--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <ul class="md:flex space-y-4 md:space-y-0 md:space-x-6">
           <li><a href="index.html" class="text-accent font-medium">Home</a></li>
           <li><a href="research.html" class="text-gray-800 hover:text-accent transition-colors">Research</a></li>
+          <li><a href="expeditions.html" class="text-gray-800 hover:text-accent transition-colors">Expeditions</a></li>
           <li><a href="publications.html" class="text-gray-800 hover:text-accent transition-colors">Publications</a></li>
           <li><a href="collaborations.html" class="text-gray-800 hover:text-accent transition-colors">Collaborations</a></li>
           <li><a href="outreach.html" class="text-gray-800 hover:text-accent transition-colors">Outreach</a></li>
@@ -110,20 +111,11 @@ Falkor (too), conducted in collaboration with scientists from the University of 
 and the Charles Darwin Research Station and Memorial University.</p>
             <a href="research.html" class="btn">Learn More</a>
           </div>
-          <div class="grid grid-cols-2 gap-4">
-            <!-- Gallery images -->
-            <div class="relative pb-[100%] shadow-md overflow-hidden rounded-lg">
-              <img src="dist/images/image2.png" alt="Research image 1" class="absolute inset-0 w-full h-full object-cover object-center">
+		  <div class="mb-8">
+            <div class="aspect-video bg-yellow-100 rounded-lg shadow-md overflow-hidden">
+              <img src="dist/images/image14.jpg" alt="My research" class="w-full h-full object-cover">
             </div>
-            <div class="relative pb-[100%] shadow-md overflow-hidden rounded-lg">
-              <img src="dist/images/image3.JPG" alt="Research image 2" class="absolute inset-0 w-full h-full object-cover object-center">
-            </div>
-            <div class="relative pb-[100%] shadow-md overflow-hidden rounded-lg">
-              <img src="dist/images/image4.JPG" alt="Research image 3" class="absolute inset-0 w-full h-full object-cover object-center">
-            </div>
-            <div class="relative pb-[100%] shadow-md overflow-hidden rounded-lg">
-              <img src="dist/images/image5.jpg" alt="Research image 4" class="absolute inset-0 w-full h-full object-cover object-center">
-            </div>
+            <p class="text-xs text-gray-500 text-right mt-1">Photo: Manu San Félix / National Geographic Pristine Seas</p>
           </div>
         </div>
       </div>
@@ -144,6 +136,24 @@ coral conservation.
 		  </div>
 		</div>
 	</section>
+
+	<div class="max-w-5xl mx-auto px-4 mb-16 md:mb-24">
+		<div class="grid grid-cols-2 md:grid-cols-4 gap-3">
+		  <!-- Gallery images -->
+		  <div class="relative pb-[75%] shadow-md overflow-hidden rounded-lg">
+			<img src="dist/images/image2.png" alt="Research image 1" class="absolute inset-0 w-full h-full object-cover object-center">
+		  </div>
+		  <div class="relative pb-[75%] shadow-md overflow-hidden rounded-lg">
+			<img src="dist/images/image3.JPG" alt="Research image 2" class="absolute inset-0 w-full h-full object-cover object-center">
+		  </div>
+		  <div class="relative pb-[75%] shadow-md overflow-hidden rounded-lg">
+			<img src="dist/images/image4.JPG" alt="Research image 3" class="absolute inset-0 w-full h-full object-cover object-center">
+		  </div>
+		  <div class="relative pb-[75%] shadow-md overflow-hidden rounded-lg">
+			<img src="dist/images/image5.jpg" alt="Research image 4" class="absolute inset-0 w-full h-full object-cover object-center">
+		  </div>
+		</div>
+	</div>
   
 	<!-- Collapsible Skills & Training Sections -->
 	<section class="pb-16 md:pb-24 bg-white">
