--- a/outreach.html
+++ b/outreach.html
@@ -31,6 +31,7 @@
         <ul class="md:flex space-y-4 md:space-y-0 md:space-x-6">
           <li><a href="index.html" class="text-gray-800 hover:text-accent transition-colors">Home</a></li>
           <li><a href="research.html" class="text-gray-800 hover:text-accent transition-colors">Research</a></li>
+          <li><a href="expeditions.html" class="text-gray-800 hover:text-accent transition-colors">Expeditions</a></li>
           <li><a href="publications.html" class="text-gray-800 hover:text-accent transition-colors">Publications</a></li>
           <li><a href="collaborations.html" class="text-gray-800 hover:text-accent transition-colors">Collaborations</a></li>
           <li><a href="outreach.html" class="text-accent font-medium">Outreach</a></li>
@@ -57,6 +58,42 @@
     <section class="py-16 md:py-24 bg-white">
       <div class="container mx-auto px-4">        
         <div class="max-w-4xl mx-auto space-y-16">
+          <!-- National Geographic Pristine Seas Instagram -->
+          <div>
+            <h3 class="text-2xl font-bold mb-4">National Geographic Pristine Seas</h3>
+            <div class="mb-6 flex justify-center">
+              <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DPMnaQACXNt/" data-instgrm-version="14" style="max-width:540px; width:100%;"></blockquote>
+            </div>
+            <p class="text-gray-700 mb-4">
+              "The Great Sea Reef is a world of its own," shares Ana Belén Yánez Suárez, National Geographic Explorer and Pristine Seas expedition team member.
+            </p>
+            <div class="flex space-x-4">
+              <span class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-gray-100 text-gray-800">
+                <i class="fas fa-calendar-alt mr-2 text-accent"></i> September 2025
+              </span>
+              <span class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-gray-100 text-gray-800">
+                <i class="fab fa-instagram mr-2 text-accent"></i> @natgeopristineseas
+              </span>
+            </div>
+            <!-- National Geographic Field Notes link -->
+            <div class="mt-4">
+              <div class="bg-gray-200 rounded-lg shadow-md relative overflow-hidden group">
+                <img src="dist/images/outreach8.png" alt="National Geographic Field Notes - Pristine Seas Fiji Expedition 2025" class="w-full h-auto">
+                <a href="https://fieldnotes.nationalgeographic.org/expedition/pristineseasfijiexpedition2025" target="_blank" rel="noopener" class="absolute inset-0 flex items-center justify-center">
+                  <i class="fas fa-external-link-alt text-white text-3xl opacity-0 group-hover:opacity-100 transition-opacity drop-shadow-lg"></i>
+                </a>
+              </div>
+              <a href="https://fieldnotes.nationalgeographic.org/expedition/pristineseasfijiexpedition2025" target="_blank" rel="noopener" class="text-accent hover:underline inline-flex items-center mt-2">
+                <span>National Geographic Field Notes</span>
+                <i class="fas fa-external-link-alt ml-2 text-xs"></i>
+              </a>
+            </div>
+            <!-- Embedded Instagram post -->
+            <div class="mt-4 flex justify-center">
+              <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DOrIcpxCQSO/" data-instgrm-version="14" style="max-width:540px; width:100%;"></blockquote>
+            </div>
+          </div>
+
           <!-- Interview 1 -->
           <div class="video-container">
             <h3 class="text-2xl font-bold mb-4">Schmidt Ocean Institute</h3>
@@ -435,6 +472,7 @@
 
   <!-- JavaScript -->
   <script src="src/js/main.js"></script>
+  <script async src="//www.instagram.com/embed.js"></script>
   <script>
     // Lazy-load YouTube videos
     document.addEventListener('DOMContentLoaded', function() {
