--- a/research.html
+++ b/research.html
@@ -45,10 +45,12 @@
 				<ul class="md:flex space-y-4 md:space-y-0 md:space-x-6">
 					<li><a href="index.html"
 						   class="text-gray-800 hover:text-accent transition-colors">Home</a></li>
-					<li><a href="research.html"
-						   class="text-accent font-medium">Research</a></li>
-					<li><a href="publications.html"
-						   class="text-gray-800 hover:text-accent transition-colors">Publications</a></li>
+				<li><a href="research.html"
+					   class="text-accent font-medium">Research</a></li>
+				<li><a href="expeditions.html"
+					   class="text-gray-800 hover:text-accent transition-colors">Expeditions</a></li>
+				<li><a href="publications.html"
+					   class="text-gray-800 hover:text-accent transition-colors">Publications</a></li>
 					<li><a href="collaborations.html"
 						   class="text-gray-800 hover:text-accent transition-colors">Collaborations</a></li>
 					<li><a href="outreach.html"
@@ -66,11 +68,14 @@
 			<div class="container mx-auto px-4">
 				<div class="max-w-prose mx-auto text-center">
 					<h1 class="text-4xl md:text-5xl font-bold mb-8">Research</h1>
-					<div class="aspect-video rounded-lg shadow-md mb-8 overflow-hidden">
-						<img src="dist/images/research.jpg"
+				<div class="mb-8">
+					<div class="aspect-video rounded-lg shadow-md overflow-hidden">
+						<img src="dist/images/research.jpeg"
 							 alt="Yellow coral in the ocean"
 							 class="w-full h-full object-cover">
 					</div>
+					<p class="text-xs text-gray-500 text-right mt-1">Photo: Manu San Félix / National Geographic Pristine Seas</p>
+				</div>
 					<p class="text-lg mb-4">
 						My research focuses on understanding how coral ecosystems, from shallow tropical
 						reefs to deep-sea communities respond to environmental stressors such as ocean
